crates/mty-syntax/tests/snapshots/parse_extern_macro__x_export_c_fn.snap
---
source: crates/sdust-syntax/tests/parse_extern_macro.rs
expression: "dump(\"export c fn add(a: I32, b: I32) -> I32 = a + b\")"
---
FILE@0..46
  EXPORT_DECL@0..46
    EXPORT_KW@0..6 "export"
    WHITESPACE@6..7 " "
    NAME@7..8
      IDENT@7..8 "c"
    WHITESPACE@8..9 " "
    FN_DECL@9..46
      FN_KW@9..11 "fn"
      WHITESPACE@11..12 " "
      NAME@12..15
        IDENT@12..15 "add"
      FN_PARAM_LIST@15..32
        L_PAREN@15..16 "("
        FN_PARAM@16..22
          NAME@16..17
            IDENT@16..17 "a"
          COLON@17..18 ":"
          WHITESPACE@18..19 " "
          TYPE_PATH@19..22
            PATH@19..22
              PATH_SEGMENT@19..22
                NAME_REF@19..22
                  IDENT@19..22 "I32"
        COMMA@22..23 ","
        WHITESPACE@23..24 " "
        FN_PARAM@24..30
          NAME@24..25
            IDENT@24..25 "b"
          COLON@25..26 ":"
          WHITESPACE@26..27 " "
          TYPE_PATH@27..30
            PATH@27..30
              PATH_SEGMENT@27..30
                NAME_REF@27..30
                  IDENT@27..30 "I32"
        R_PAREN@30..31 ")"
        WHITESPACE@31..32 " "
      THIN_ARROW@32..34 "->"
      WHITESPACE@34..35 " "
      RET_TYPE@35..39
        TYPE_PATH@35..39
          PATH@35..39
            PATH_SEGMENT@35..38
              NAME_REF@35..38
                IDENT@35..38 "I32"
            WHITESPACE@38..39 " "
      EQ@39..40 "="
      WHITESPACE@40..41 " "
      BINARY_EXPR@41..46
        PATH_EXPR@41..43
          PATH@41..43
            PATH_SEGMENT@41..42
              NAME_REF@41..42
                IDENT@41..42 "a"
            WHITESPACE@42..43 " "
        PLUS@43..44 "+"
        WHITESPACE@44..45 " "
        PATH_EXPR@45..46
          PATH@45..46
            PATH_SEGMENT@45..46
              NAME_REF@45..46
                IDENT@45..46 "b"

errors: []
