crates/mty-syntax/tests/snapshots/parse_extern_macro__x_extern_c_variadic_mixed_block.snap
---
source: crates/mty-syntax/tests/parse_extern_macro.rs
expression: "dump(\"extern c {\\n  fn printf(fmt: *U8, ...) -> I32\\n  fn strlen(s: *U8) -> USize\\n}\")"
---
FILE@0..75
  EXTERN_BLOCK@0..75
    EXTERN_KW@0..6 "extern"
    WHITESPACE@6..7 " "
    NAME@7..8
      IDENT@7..8 "c"
    WHITESPACE@8..9 " "
    L_BRACE@9..10 "{"
    WHITESPACE@10..13 "\n  "
    EXTERN_FN@13..47
      FN_KW@13..15 "fn"
      WHITESPACE@15..16 " "
      NAME@16..22
        IDENT@16..22 "printf"
      FN_PARAM_LIST@22..38
        L_PAREN@22..23 "("
        FN_PARAM@23..31
          NAME@23..26
            IDENT@23..26 "fmt"
          COLON@26..27 ":"
          WHITESPACE@27..28 " "
          TYPE_BORROW@28..31
            STAR@28..29 "*"
            TYPE_PATH@29..31
              PATH@29..31
                PATH_SEGMENT@29..31
                  NAME_REF@29..31
                    IDENT@29..31 "U8"
        COMMA@31..32 ","
        WHITESPACE@32..33 " "
        VARIADIC_MARKER@33..36
          DOT_DOT_DOT@33..36 "..."
        R_PAREN@36..37 ")"
        WHITESPACE@37..38 " "
      THIN_ARROW@38..40 "->"
      WHITESPACE@40..41 " "
      RET_TYPE@41..47
        TYPE_PATH@41..47
          PATH@41..47
            PATH_SEGMENT@41..44
              NAME_REF@41..44
                IDENT@41..44 "I32"
            WHITESPACE@44..47 "\n  "
    EXTERN_FN@47..74
      FN_KW@47..49 "fn"
      WHITESPACE@49..50 " "
      NAME@50..56
        IDENT@50..56 "strlen"
      FN_PARAM_LIST@56..65
        L_PAREN@56..57 "("
        FN_PARAM@57..63
          NAME@57..58
            IDENT@57..58 "s"
          COLON@58..59 ":"
          WHITESPACE@59..60 " "
          TYPE_BORROW@60..63
            STAR@60..61 "*"
            TYPE_PATH@61..63
              PATH@61..63
                PATH_SEGMENT@61..63
                  NAME_REF@61..63
                    IDENT@61..63 "U8"
        R_PAREN@63..64 ")"
        WHITESPACE@64..65 " "
      THIN_ARROW@65..67 "->"
      WHITESPACE@67..68 " "
      RET_TYPE@68..74
        TYPE_PATH@68..74
          PATH@68..74
            PATH_SEGMENT@68..73
              NAME_REF@68..73
                IDENT@68..73 "USize"
            WHITESPACE@73..74 "\n"
    R_BRACE@74..75 "}"

errors: []
