crates/mty-syntax/tests/snapshots/parse_extern_macro__x_macro.snap
---
source: crates/sdust-syntax/tests/parse_extern_macro.rs
expression: "dump(\"macro assert_eq(a, b) => {\\n  if a != b { panic(\\\"assert_eq failed\\\") }\\n}\")"
---
FILE@0..70
  MACRO_DECL@0..70
    MACRO_KW@0..5 "macro"
    WHITESPACE@5..6 " "
    NAME@6..15
      IDENT@6..15 "assert_eq"
    L_PAREN@15..16 "("
    NAME@16..17
      IDENT@16..17 "a"
    COMMA@17..18 ","
    WHITESPACE@18..19 " "
    NAME@19..20
      IDENT@19..20 "b"
    R_PAREN@20..21 ")"
    WHITESPACE@21..22 " "
    FAT_ARROW@22..24 "=>"
    WHITESPACE@24..25 " "
    L_BRACE@25..26 "{"
    WHITESPACE@26..29 "\n  "
    IF_KW@29..31 "if"
    WHITESPACE@31..32 " "
    IDENT@32..33 "a"
    WHITESPACE@33..34 " "
    BANG_EQ@34..36 "!="
    WHITESPACE@36..37 " "
    IDENT@37..38 "b"
    WHITESPACE@38..39 " "
    L_BRACE@39..40 "{"
    WHITESPACE@40..41 " "
    IDENT@41..46 "panic"
    L_PAREN@46..47 "("
    STRING_LITERAL@47..65 "\"assert_eq failed\""
    R_PAREN@65..66 ")"
    WHITESPACE@66..67 " "
    R_BRACE@67..68 "}"
    WHITESPACE@68..69 "\n"
    R_BRACE@69..70 "}"

errors: []
