crates/mty-syntax/tests/snapshots/parse_extern_macro__x_unsafe_block.snap
---
source: crates/sdust-syntax/tests/parse_extern_macro.rs
expression: "dump_expr(\"unsafe {\\n  let p = raw_ptr(addr)\\n  p.read()\\n}\")"
---
FILE@0..45
  UNSAFE_BLOCK@0..45
    UNSAFE_KW@0..6 "unsafe"
    WHITESPACE@6..7 " "
    BLOCK@7..45
      L_BRACE@7..8 "{"
      WHITESPACE@8..11 "\n  "
      LET_STMT@11..35
        LET_KW@11..14 "let"
        WHITESPACE@14..15 " "
        BINDING_PAT@15..17
          NAME@15..16
            IDENT@15..16 "p"
          WHITESPACE@16..17 " "
        EQ@17..18 "="
        WHITESPACE@18..19 " "
        CALL_EXPR@19..35
          PATH_EXPR@19..26
            PATH@19..26
              PATH_SEGMENT@19..26
                NAME_REF@19..26
                  IDENT@19..26 "raw_ptr"
          ARG_LIST@26..35
            L_PAREN@26..27 "("
            ARG@27..31
              PATH_EXPR@27..31
                PATH@27..31
                  PATH_SEGMENT@27..31
                    NAME_REF@27..31
                      IDENT@27..31 "addr"
            R_PAREN@31..32 ")"
            WHITESPACE@32..35 "\n  "
      EXPR_STMT@35..44
        CALL_EXPR@35..44
          PATH_EXPR@35..41
            PATH@35..41
              PATH_SEGMENT@35..36
                NAME_REF@35..36
                  IDENT@35..36 "p"
              DOT@36..37 "."
              PATH_SEGMENT@37..41
                NAME_REF@37..41
                  IDENT@37..41 "read"
          ARG_LIST@41..44
            L_PAREN@41..42 "("
            R_PAREN@42..43 ")"
            WHITESPACE@43..44 "\n"
      R_BRACE@44..45 "}"

errors: []
