crates/mty-syntax/tests/snapshots/parse_extern_macro__x_unsafe_fn_requires.snap
---
source: crates/sdust-syntax/tests/parse_extern_macro.rs
expression: "dump(\"pub unsafe fn from_raw(ptr: *U8, len: USize) -> Bytes\\n  requires ptr != null\\n  requires valid(ptr, len)\")"
---
FILE@0..103
  FN_DECL@0..103
    VISIBILITY@0..3
      PUB_KW@0..3 "pub"
    WHITESPACE@3..4 " "
    UNSAFE_KW@4..10 "unsafe"
    WHITESPACE@10..11 " "
    FN_KW@11..13 "fn"
    WHITESPACE@13..14 " "
    NAME@14..22
      IDENT@14..22 "from_raw"
    FN_PARAM_LIST@22..45
      L_PAREN@22..23 "("
      FN_PARAM@23..31
        NAME@23..26
          IDENT@23..26 "ptr"
        COLON@26..27 ":"
        WHITESPACE@27..28 " "
        TYPE_BORROW@28..31
          STAR@28..29 "*"
          TYPE_PATH@29..31
            PATH@29..31
              PATH_SEGMENT@29..31
                NAME_REF@29..31
                  IDENT@29..31 "U8"
      COMMA@31..32 ","
      WHITESPACE@32..33 " "
      FN_PARAM@33..43
        NAME@33..36
          IDENT@33..36 "len"
        COLON@36..37 ":"
        WHITESPACE@37..38 " "
        TYPE_PATH@38..43
          PATH@38..43
            PATH_SEGMENT@38..43
              NAME_REF@38..43
                IDENT@38..43 "USize"
      R_PAREN@43..44 ")"
      WHITESPACE@44..45 " "
    THIN_ARROW@45..47 "->"
    WHITESPACE@47..48 " "
    RET_TYPE@48..56
      TYPE_PATH@48..56
        PATH@48..56
          PATH_SEGMENT@48..53
            NAME_REF@48..53
              IDENT@48..53 "Bytes"
          WHITESPACE@53..56 "\n  "
    REQUIRES_KW@56..64 "requires"
    WHITESPACE@64..65 " "
    BINARY_EXPR@65..79
      PATH_EXPR@65..69
        PATH@65..69
          PATH_SEGMENT@65..68
            NAME_REF@65..68
              IDENT@65..68 "ptr"
          WHITESPACE@68..69 " "
      BANG_EQ@69..71 "!="
      WHITESPACE@71..72 " "
      PATH_EXPR@72..79
        PATH@72..79
          PATH_SEGMENT@72..76
            NAME_REF@72..76
              IDENT@72..76 "null"
          WHITESPACE@76..79 "\n  "
    REQUIRES_KW@79..87 "requires"
    WHITESPACE@87..88 " "
    CALL_EXPR@88..103
      PATH_EXPR@88..93
        PATH@88..93
          PATH_SEGMENT@88..93
            NAME_REF@88..93
              IDENT@88..93 "valid"
      ARG_LIST@93..103
        L_PAREN@93..94 "("
        ARG@94..97
          PATH_EXPR@94..97
            PATH@94..97
              PATH_SEGMENT@94..97
                NAME_REF@94..97
                  IDENT@94..97 "ptr"
        COMMA@97..98 ","
        WHITESPACE@98..99 " "
        ARG@99..102
          PATH_EXPR@99..102
            PATH@99..102
              PATH_SEGMENT@99..102
                NAME_REF@99..102
                  IDENT@99..102 "len"
        R_PAREN@102..103 ")"

errors: []
